Issue#SH-847 UI: Screens (Step 2 - Certificate type & Recipients) add text in template if no certificate and preview modal alignment changes & add certificate button made clickable

--- a/src/app/client/src/app/modules/shared-feature/components/cert-preview-popup/cert-preview-popup.component.scss
+++ b/src/app/client/src/app/modules/shared-feature/components/cert-preview-popup/cert-preview-popup.component.scss
@@ -1,7 +1,1 @@
 
-.cert-preview-img{
-    height: 490px; width:712px; margin:0 auto;
-    img{
-        max-width:100%;  
-    }
-}
